# DataWall

./: CMakeLists.txt  README.md
DataWallClient/: ClientForm.Designer.cs  ClientForm.cs  DataWallClient.sln  Program.cs
DataWallEngine/: CMakeLists.txt  DataWallEngine.cpp  DataWallEngine.h  framework.h
DataWallLoader/: CMakeLists.txt  DataWallLoader.cpp  DataWallLoader.h  framework.h
DataWallServer/: CMakeLists.txt  Client.cs  DBEntities.cs  DataWallServer.csproj  DataWallServer_Main.Designer.cs  DataWallServer_Main.cs  DataWallServer_Main.resx  Logger.cs  Program.cs  Server.cs
DataWallServer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
DataWallService/: CMakeLists.txt  DataWallService.cpp
Docs/: PZ.docx  PZ_check.docx  ~$PZ.docx
MemoryModule/: CMakeLists.txt  MemoryModule.c
TestDLL/: CMakeLists.txt  TestDLL.cpp  TestDLL.h  framework.h
TestData/: qwer  test  user
TestData/1 TestSoft/: text.txt
TestData/2 SecondSoft/: files.info
TestData/datawallinfo/: datawallinfo_computer.sql  datawallinfo_software.sql  datawallinfo_user.sql  datawallinfo_user_comp.sql  datawallinfo_user_soft.sql
TestDataWall/: CMakeLists.txt  TestDataWall.cpp
